changes and improvements in several clasess