@@ -1,21 +1,21 @@
-package com.mootiv.domain.cycle;
+package com.mootiv.domain.plan;
 
 import com.mootiv.domain.TrainingType;
 import com.mootiv.domain.goal.Goal;
 import jakarta.persistence.*;
+import lombok.AccessLevel;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Entity
 @Getter @Setter
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class TrainingCycle {
 
     @Id
@@ -27,6 +27,8 @@ public class TrainingCycle {
     private List<TrainingWeek> weeks;
     @ManyToOne
     private Goal goal;
+    @ManyToOne
+    private TrainingType trainingType;
     @Enumerated(EnumType.STRING)
     private CycleStatus status;
     private Integer daysOfTraining;
@@ -88,6 +90,7 @@ public class TrainingCycle {
             throw new RuntimeException("No se encontro el tipo de entrenamiento para la combinacion de dias y objetivos");
         }
         trainingCycle.setGoal(goal);
+        trainingCycle.setTrainingType(trainingType);
         trainingCycle.setStatus(CycleStatus.DRAFT);
         trainingCycle.createWeeksOfTraining(startDate, numberOfWeeks, numberOfDays);
         return trainingCycle;
@@ -105,7 +108,7 @@ public class TrainingCycle {
 
         LocalDate lastStartDate = updatedWeeks.isEmpty()
                 ? week.getStartDate()
-                : updatedWeeks.getLast().getStartDate();
+                : updatedWeeks.get(updatedWeeks.size() - 1).getStartDate();
 
         TrainingWeek newWeek = TrainingWeek.with(lastStartDate.plusDays(7), week.getDays().size());
         this.weeks.add(newWeek);
@@ -114,4 +117,21 @@ public class TrainingCycle {
     }
 
 
+    public boolean overlapsWith(LocalDate newStartDate, int newNumberOfWeeks) {
+
+        LocalDate newEndDate = newStartDate.plusWeeks(newNumberOfWeeks - 1);
+
+        LocalDate currentStartDate = this.getStartDate();
+        LocalDate currentEndDate = currentStartDate.plusWeeks(this.getNumberOfWeeks() - 1);
+
+        return !(newEndDate.isBefore(currentStartDate) || newStartDate.isAfter(currentEndDate));
+    }
+
+    public Integer getNumberOfWeeks() {
+        return this.weeks.size();
+    }
+
+    public boolean isCanceled() {
+        return this.status.equals(CycleStatus.CANCELED);
+    }
 }
